--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.2.2",
+    "react-modal": "^3.8.1",
     "react-swipeable": "^4.3.0",
     "react-typography": "^0.16.13",
     "styled-components": "^4.1.2",
