--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "gatsby-plugin-feed": "^2.3.21",
     "gatsby-plugin-google-analytics": "^2.1.28",
     "gatsby-plugin-manifest": "^2.2.29",
-    "gatsby-plugin-offline": "^3.0.22",
     "gatsby-plugin-react-helmet": "^3.1.15",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sharp": "^2.3.2",
     "gatsby-plugin-typography": "^2.3.17",
     "gatsby-remark-copy-linked-files": "^2.1.30",
