--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
-    "gatsby": "^2.18.11",
-    "gatsby-cli": "^2.8.13",
+    "gatsby": "^2.22.9",
+    "gatsby-cli": "^2.12.34",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-feed": "^2.3.21",
     "gatsby-plugin-google-analytics": "^2.1.28",
@@ -35,6 +35,7 @@
     "react-modal": "^3.11.1",
     "react-swipeable": "^5.5.0",
     "react-typography": "^0.16.19",
+    "sharp": "^0.25.3",
     "styled-components": "^4.4.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
