reverted gatsby to 2.20.28

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/gatsbyjs/gatsby-starter-blog/issues"
   },
   "dependencies": {
-    "gatsby": "^2.22.9",
-    "gatsby-cli": "^2.12.34",
+    "acorn": "^7.2.0",
+    "gatsby": "^2.20.28",
     "gatsby-image": "^2.2.33",
     "gatsby-plugin-feed": "^2.3.21",
     "gatsby-plugin-google-analytics": "^2.1.28",
@@ -33,6 +33,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-modal": "^3.11.1",
+    "react-refresh": "^0.8.2",
     "react-swipeable": "^5.5.0",
     "react-typography": "^0.16.19",
     "sharp": "^0.25.3",
