--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "gatsby-remark-copy-linked-files": "^2.1.30",
     "gatsby-remark-embed-video": "^2.0.1",
     "gatsby-remark-images": "^3.1.33",
+    "gatsby-remark-katex": "^3.3.10",
     "gatsby-remark-prismjs": "^3.3.24",
     "gatsby-remark-responsive-iframe": "^2.2.27",
     "gatsby-remark-smartypants": "^2.1.16",
     "gatsby-source-filesystem": "^2.1.38",
-    "gatsby-transformer-remark": "^2.6.37",
+    "gatsby-transformer-remark": "^2.8.27",
     "gatsby-transformer-sharp": "^2.3.5",
+    "katex": "^0.12.0",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react": "^16.6.0",
